[gd_scene load_steps=6 format=3 uid="uid://duladne1ob6m2"]

[ext_resource type="Script" uid="uid://cdooh0rdibdom" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bg1eoljuho8dr" path="res://components/managers/data_manager/data_manager.tscn" id="1_gngu7"]
[ext_resource type="PackedScene" uid="uid://cdipip8pwumdx" path="res://components/managers/black_screen_manager/black_screen_manager.tscn" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://b3mam2vbuvuva" path="res://components/managers/scene_manager/scene_manager.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cgk8hm3ccvmwb" path="res://scenes/logo.tscn" id="5_lquwl"]

[node name="Main" type="Node" node_paths=PackedStringArray("black_screen_manager", "data_manager", "scene_manager")]
script = ExtResource("1_1bvp3")
black_screen_manager = NodePath("Managers/BlackScreenManager")
data_manager = NodePath("Managers/DataManager")
scene_manager = NodePath("Managers/SceneManager")

[node name="Managers" type="Node" parent="."]

[node name="BlackScreenManager" parent="Managers" instance=ExtResource("1_h2yge")]

[node name="DataManager" parent="Managers" instance=ExtResource("1_gngu7")]

[node name="SceneManager" parent="Managers" node_paths=PackedStringArray("_scenes_parent") instance=ExtResource("2_0xm2m")]
_scenes_parent = NodePath("../../Scenes")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Scenes" type="Node2D" parent="."]

[node name="Logo" parent="Scenes" instance=ExtResource("5_lquwl")]

[node name="Player" type="Node2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
